src/main/java/plm/dynamic/engine/exprs/g4/RuleExpressionParser.java
// Generated from D:/SourceSpace/SpaceFlame/XModule-PLM/src/main/java/plm/dynamic/engine/exprs/g4/RuleExpressionParser.g4 by ANTLR 4.13.2

  package plm.dynamic.engine.exprs.g4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class RuleExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TRUE=1, FALSE=2, NIL=3, PT_L=4, PT_R=5, DOT=6, QUOTE=7, ADD=8, SUB=9, 
		MUL=10, DIV=11, PER=12, QMARK=13, COMMA=14, COLON=15, EQ=16, NE=17, GT=18, 
		LT=19, GE=20, LE=21, AND=22, OR=23, NOT=24, LONG=25, NAME=26, DIGITS=27, 
		STRING=28, EXPONENT=29, WS=30;
	public static final int
		RULE_ruleExpr = 0, RULE_object = 1, RULE_calc = 2, RULE_minus = 3, RULE_logic = 4, 
		RULE_bool = 5, RULE_charact = 6, RULE_function = 7, RULE_method = 8, RULE_referid = 9, 
		RULE_string = 10, RULE_digits = 11, RULE_longs = 12, RULE_pl = 13, RULE_pr = 14, 
		RULE_point = 15, RULE_nil = 16, RULE_dot = 17, RULE_not = 18, RULE_colon = 19, 
		RULE_qmark = 20, RULE_comma = 21, RULE_comps = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"ruleExpr", "object", "calc", "minus", "logic", "bool", "charact", "function", 
			"method", "referid", "string", "digits", "longs", "pl", "pr", "point", 
			"nil", "dot", "not", "colon", "qmark", "comma", "comps"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'true'", "'false'", "'null'", "'('", "')'", "'.'", "'\"'", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'?'", "','", "':'", "'=='", "'!='", "'>'", 
			"'<'", "'>='", "'<='", "'&&'", "'||'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TRUE", "FALSE", "NIL", "PT_L", "PT_R", "DOT", "QUOTE", "ADD", 
			"SUB", "MUL", "DIV", "PER", "QMARK", "COMMA", "COLON", "EQ", "NE", "GT", 
			"LT", "GE", "LE", "AND", "OR", "NOT", "LONG", "NAME", "DIGITS", "STRING", 
			"EXPONENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RuleExpressionParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RuleExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RuleExprContext extends ParserRuleContext {
		public NilContext nil() {
			return getRuleContext(NilContext.class,0);
		}
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public LongsContext longs() {
			return getRuleContext(LongsContext.class,0);
		}
		public DigitsContext digits() {
			return getRuleContext(DigitsContext.class,0);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public PlContext pl() {
			return getRuleContext(PlContext.class,0);
		}
		public List<RuleExprContext> ruleExpr() {
			return getRuleContexts(RuleExprContext.class);
		}
		public RuleExprContext ruleExpr(int i) {
			return getRuleContext(RuleExprContext.class,i);
		}
		public PrContext pr() {
			return getRuleContext(PrContext.class,0);
		}
		public NotContext not() {
			return getRuleContext(NotContext.class,0);
		}
		public MinusContext minus() {
			return getRuleContext(MinusContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public List<CommaContext> comma() {
			return getRuleContexts(CommaContext.class);
		}
		public CommaContext comma(int i) {
			return getRuleContext(CommaContext.class,i);
		}
		public CalcContext calc() {
			return getRuleContext(CalcContext.class,0);
		}
		public LogicContext logic() {
			return getRuleContext(LogicContext.class,0);
		}
		public CompsContext comps() {
			return getRuleContext(CompsContext.class,0);
		}
		public QmarkContext qmark() {
			return getRuleContext(QmarkContext.class,0);
		}
		public ColonContext colon() {
			return getRuleContext(ColonContext.class,0);
		}
		public DotContext dot() {
			return getRuleContext(DotContext.class,0);
		}
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public RuleExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterRuleExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitRuleExpr(this);
		}
	}

	public final RuleExprContext ruleExpr() throws RecognitionException {
		return ruleExpr(0);
	}

	private RuleExprContext ruleExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		RuleExprContext _localctx = new RuleExprContext(_ctx, _parentState);
		RuleExprContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_ruleExpr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(47);
				nil();
				}
				break;
			case 2:
				{
				setState(48);
				bool();
				}
				break;
			case 3:
				{
				setState(49);
				string();
				}
				break;
			case 4:
				{
				setState(50);
				longs();
				}
				break;
			case 5:
				{
				setState(51);
				digits();
				}
				break;
			case 6:
				{
				setState(52);
				object();
				}
				break;
			case 7:
				{
				setState(53);
				pl();
				setState(54);
				ruleExpr(0);
				setState(55);
				pr();
				}
				break;
			case 8:
				{
				setState(57);
				not();
				setState(58);
				ruleExpr(8);
				}
				break;
			case 9:
				{
				setState(60);
				minus();
				setState(61);
				ruleExpr(7);
				}
				break;
			case 10:
				{
				setState(63);
				function();
				setState(64);
				pl();
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 520094238L) != 0)) {
					{
					setState(65);
					ruleExpr(0);
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(66);
						comma();
						setState(67);
						ruleExpr(0);
						}
						}
						setState(73);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(76);
				pr();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(117);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(115);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new RuleExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_ruleExpr);
						setState(80);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(81);
						calc();
						setState(82);
						ruleExpr(7);
						}
						break;
					case 2:
						{
						_localctx = new RuleExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_ruleExpr);
						setState(84);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(85);
						logic();
						setState(86);
						ruleExpr(6);
						}
						break;
					case 3:
						{
						_localctx = new RuleExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_ruleExpr);
						setState(88);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(89);
						comps();
						setState(90);
						ruleExpr(5);
						}
						break;
					case 4:
						{
						_localctx = new RuleExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_ruleExpr);
						setState(92);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(93);
						qmark();
						setState(94);
						ruleExpr(0);
						setState(95);
						colon();
						setState(96);
						ruleExpr(4);
						}
						break;
					case 5:
						{
						_localctx = new RuleExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_ruleExpr);
						setState(98);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(99);
						dot();
						setState(100);
						method();
						setState(101);
						pl();
						setState(111);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 520094238L) != 0)) {
							{
							setState(102);
							ruleExpr(0);
							setState(108);
							_errHandler.sync(this);
							_la = _input.LA(1);
							while (_la==COMMA) {
								{
								{
								setState(103);
								comma();
								setState(104);
								ruleExpr(0);
								}
								}
								setState(110);
								_errHandler.sync(this);
								_la = _input.LA(1);
							}
							}
						}

						setState(113);
						pr();
						}
						break;
					}
					} 
				}
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjectContext extends ParserRuleContext {
		public CharactContext charact() {
			return getRuleContext(CharactContext.class,0);
		}
		public List<ReferidContext> referid() {
			return getRuleContexts(ReferidContext.class);
		}
		public ReferidContext referid(int i) {
			return getRuleContext(ReferidContext.class,i);
		}
		public List<PointContext> point() {
			return getRuleContexts(PointContext.class);
		}
		public PointContext point(int i) {
			return getRuleContext(PointContext.class,i);
		}
		public ObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitObject(this);
		}
	}

	public final ObjectContext object() throws RecognitionException {
		ObjectContext _localctx = new ObjectContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_object);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(120);
					referid();
					setState(121);
					point();
					}
					} 
				}
				setState(127);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(128);
			charact();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CalcContext extends ParserRuleContext {
		public TerminalNode ADD() { return getToken(RuleExpressionParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(RuleExpressionParser.SUB, 0); }
		public TerminalNode MUL() { return getToken(RuleExpressionParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(RuleExpressionParser.DIV, 0); }
		public TerminalNode PER() { return getToken(RuleExpressionParser.PER, 0); }
		public CalcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_calc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterCalc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitCalc(this);
		}
	}

	public final CalcContext calc() throws RecognitionException {
		CalcContext _localctx = new CalcContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_calc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 7936L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MinusContext extends ParserRuleContext {
		public TerminalNode SUB() { return getToken(RuleExpressionParser.SUB, 0); }
		public MinusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_minus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterMinus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitMinus(this);
		}
	}

	public final MinusContext minus() throws RecognitionException {
		MinusContext _localctx = new MinusContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_minus);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(SUB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(RuleExpressionParser.AND, 0); }
		public TerminalNode OR() { return getToken(RuleExpressionParser.OR, 0); }
		public LogicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterLogic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitLogic(this);
		}
	}

	public final LogicContext logic() throws RecognitionException {
		LogicContext _localctx = new LogicContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_logic);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_la = _input.LA(1);
			if ( !(_la==AND || _la==OR) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(RuleExpressionParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(RuleExpressionParser.FALSE, 0); }
		public BoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitBool(this);
		}
	}

	public final BoolContext bool() throws RecognitionException {
		BoolContext _localctx = new BoolContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bool);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CharactContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(RuleExpressionParser.NAME, 0); }
		public CharactContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_charact; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterCharact(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitCharact(this);
		}
	}

	public final CharactContext charact() throws RecognitionException {
		CharactContext _localctx = new CharactContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_charact);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(RuleExpressionParser.NAME, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitFunction(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MethodContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(RuleExpressionParser.NAME, 0); }
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitMethod(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_method);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReferidContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(RuleExpressionParser.NAME, 0); }
		public ReferidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_referid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterReferid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitReferid(this);
		}
	}

	public final ReferidContext referid() throws RecognitionException {
		ReferidContext _localctx = new ReferidContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_referid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(RuleExpressionParser.STRING, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitString(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DigitsContext extends ParserRuleContext {
		public TerminalNode DIGITS() { return getToken(RuleExpressionParser.DIGITS, 0); }
		public TerminalNode EXPONENT() { return getToken(RuleExpressionParser.EXPONENT, 0); }
		public DigitsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_digits; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterDigits(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitDigits(this);
		}
	}

	public final DigitsContext digits() throws RecognitionException {
		DigitsContext _localctx = new DigitsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_digits);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(DIGITS);
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(149);
				match(EXPONENT);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LongsContext extends ParserRuleContext {
		public TerminalNode LONG() { return getToken(RuleExpressionParser.LONG, 0); }
		public LongsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_longs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterLongs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitLongs(this);
		}
	}

	public final LongsContext longs() throws RecognitionException {
		LongsContext _localctx = new LongsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_longs);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(LONG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlContext extends ParserRuleContext {
		public TerminalNode PT_L() { return getToken(RuleExpressionParser.PT_L, 0); }
		public PlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterPl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitPl(this);
		}
	}

	public final PlContext pl() throws RecognitionException {
		PlContext _localctx = new PlContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_pl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(PT_L);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrContext extends ParserRuleContext {
		public TerminalNode PT_R() { return getToken(RuleExpressionParser.PT_R, 0); }
		public PrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterPr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitPr(this);
		}
	}

	public final PrContext pr() throws RecognitionException {
		PrContext _localctx = new PrContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_pr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(PT_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PointContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(RuleExpressionParser.DOT, 0); }
		public PointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_point; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).enterPoint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleExpressionParserListener ) ((RuleExpressionParserListener)listener).exitPoint(this);
		}
	}

	public final PointContext point() throws RecognitionException {
		PointContext _localctx = new PointContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_point);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
